tests/core/snapshots/cors-invalid-origins.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Invalid CORS configuration: Cannot combine `Access-Control-Allow-Credentials: true` with `Access-Control-Allow-Origin: *`",
    "trace": [
      "schema",
      "@server",
      "headers",
      "cors"
    ],
    "description": null
  }
]
