tests/core/snapshots/custom-headers.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json",
    "x-id": "1",
    "x-name": "John Doe"
  },
  "body": {
    "data": {
      "greet": "Hello World!"
    }
  }
}
