tests/core/snapshots/custom-scalars.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
snapshot_kind: text
---
schema @server @upstream {
  query: Query
}

type Query {
  qBytes: Bytes @expr(body: "1")
  qDate: Date @expr(body: "2023-10-05T00:00:00Z")
  qDateTime: DateTime @expr(body: "2023-10-05T00:00:00Z")
  qEmail: Email @expr(body: "funny@not.com")
  qInt128: Int128 @expr(body: "7")
  qInt16: Int16 @expr(body: 8)
  qInt32: Int32 @expr(body: 9)
  qInt64: Int64 @expr(body: "10")
  qInt8: Int8 @expr(body: 11)
  qJSON: JSON @expr(body: {a: 1, b: 2})
  qPhoneNumber: PhoneNumber @expr(body: "+1234567890")
  qUInt128: UInt128 @expr(body: "2")
  qUInt16: UInt16 @expr(body: 3)
  qUInt32: UInt32 @expr(body: 4)
  qUInt64: UInt64 @expr(body: "5")
  qUInt8: UInt8 @expr(body: 6)
  qUrl: Url @expr(body: "http://example.com")
}
