tests/core/snapshots/dedupe_batch_query_execution.md_0.snap
---
source: tests/core/spec.rs
expression: response
snapshot_kind: text
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "posts": [
        {
          "id": 1,
          "userId": 1
        },
        {
          "id": 2,
          "userId": 2
        }
      ]
    }
  }
}
