tests/core/snapshots/default-value-arg.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream {
  query: Query
}

input Input {
  id: Int!
}

type Query {
  bar(input: Input = {id: 1}): Int @http(url: "http://abc.com/bar/{{.args.input.id}}")
}
